force-app/main/default/objects/ucinn_ascendv2__NPV_Rates__c/ucinn_ascendv2__NPV_Rates__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds the current rates for pledges based on duration that defaults to pledges</description>
    <label>NPV Rates</label>
</CustomObject>