force-app/main/default/objects/ucinn_ascendv2__NPV_Rates__c/fields/ucinn_ascendv2__Max_Year__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Max_Year__c</fullName>
    <label>Max Year</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>