force-app/main/default/objects/ucinn_ascendv2__NPV_Rates__c/fields/ucinn_ascendv2__Min_Year__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Min_Year__c</fullName>
    <label>Min Year</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>