force-app/main/default/objects/ucinn_ascendv2__NPV_Rates__c/fields/ucinn_ascendv2__Percent__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Percent__c</fullName>
    <label>Percent</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>