force-app/main/default/objects/ucinn_ascendv2__NPV_Rates__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__Effective_Date__c</columns>
    <columns>ucinn_ascendv2__Expiry_Date__c</columns>
    <columns>ucinn_ascendv2__Max_Year__c</columns>
    <columns>ucinn_ascendv2__Min_Year__c</columns>
    <columns>ucinn_ascendv2__Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>